# parcurs

./: .clang-format  .~lock.foaie_parcurs_B-151-VGT_august_2021_Alex_Bora_.xlsx#  :w  Makefile  README.md  a.out  b151-iunie.xlsx  bash.sh  compiles.sh  config.h  config.mk  date.c  date.h  excel.c  excel.h  flags  foaie.mk  foaie.py  foaie.xlsx  foaie2  foaie_2  foaie_2.c  foaie_2_bak.c  foaie_parcurs_B-151-VGT_aprilie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_august_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_august_2021_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_decembrie_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_decembrie_2021_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_februarie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_ianuarie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_ianuarie_2022_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_ianuarie_2022_Alex_Bora_21.02.2022.xlsx  foaie_parcurs_B-151-VGT_iulie_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_iulie_2021_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_martie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_noiembrie_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_noiembrie_2021_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_octombrie_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_octombrie_2021_Alex_Bora_.xlsx  foaie_parcurs_B-151-VGT_septembrie_2021_Alex_Bora.xlsx  (+33 more)
SCRATCH/: .clang-format  .row.c.swp  .timeanddate.swp  CMakeLists.txt  Makefile  annotate  arg  arg1.s  array  array.c  bismarck.txt  cachegrind.out.124  cachegrind.out.19260  cachegrind.out.98979  cachegrind.out.99026  cachegrind.out.99041  cachegrind.out.99048  cachegrind.out.99066  cachegrind.out.99075  cachegrind.out.99081  cachegrind.out.99095  cachegrind.out.99115  callgrind.out.11494  callgrind.out.19172  callgrind.out.19641  callgrind.out.20714  callgrind.out.6140  callgrind.out.6171  callgrind.out.6178  callgrind.out.6232  callgrind.out.6277  callgrind.out.6668  callgrind.out.6672  callgrind.out.6699  callgrind.out.6722  callgrind.out.6786  callgrind.out.6839  callgrind.out.6982  callgrind.out.7030  callgrind.out.7316  (+117 more)
SCRATCH/CLEAN/: .clang_format  LUNA  Makefile  a.out  audio  audio.c  audio2.c  audio3.c  callgrind.out.20029  callgrind.out.24498  copy_test.c  date2.c  errors  excel2.c  final_program  flags.txt  fltk  fltk.cpp  fltk2  fltk2.cxx  fltk2.h  fltk_transparent  fltk_transparent.mm  foaie.py  foaie2.py  foaie_2  foaie_3  foaie_4  foaie_5  foaie_parcurs_B-151-VGT_aprilie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_aprilie_2023_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_august_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_decembrie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_februarie_2023_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_ianuarie_2023_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_iunie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_mai_2021_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_mai_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_mai_2023_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_martie_2023_Alex_Bora.xlsx  (+35 more)
SCRATCH/CLEAN/fltk2.app/Contents/: Info.plist
SCRATCH/CLEAN/gpt.app/Contents/: Info.plist
SCRATCH/RELEASE/: .gitignore  CMakeLists.txt  Makefile  check_alignment.s  cmpxchg  cpui.c  cpuid1  date.c  excel.c  final_program  foaie_parcurs_B-151-VGT_aprilie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_august_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_februarie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_ianuarie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_iunie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_mai_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_martie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_octombrie_2022_Alex_Bora.xlsx  foaie_parcurs_B-151-VGT_septembrie_2022_Alex_Bora.xlsx  func.c  km  log  mail.c  mail_tmp  mail_tmp.c  main.c  main.h  map2.txt  md5-test  mime.py  pass  pass_1  seek  sha1  sha1-fast-x8664.S  sha1-test  sha1-test.c  sha1.c  sha1.h  tags  (+6 more)
SCRATCH/RELEASE/asm/: .float2.s.swp  CMakeCache.txt  CMakeLists.txt  Makefile  _print_float.s  arduino1  arduino1.c  arg1  arg1.s  arg2  arg2.s  arg3  arg3.s  arg4.s  arg5.s  arg6.s  arg7.s  arg8.s  arg9  arg9.s  bash  bit1  bit1.s  bit2  bit2.s  bit3  bit3.s  bus1  bus1.s  cat_speak  cat_speak.ld_5ULWN2  cat_speak.s  cmake_install.cmake  cmp  cmp.c  cmpxchg1.s  cond1.c  cpuflags  cpuflags.c  cpuflags.h  (+163 more)
SCRATCH/RELEASE/asm/auto/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  cmake_install.cmake  config.h  config.h.in  config.status  configure  configure.ac  lib.c  libtool  main  main.c  main.gcda  main.gcno
SCRATCH/RELEASE/asm/cgi-bin/: simpleform.cgi  test.sh
SCRATCH/RELEASE/asm/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cd.sh  cmake_install.cmake  gtk  gtk.c  hello  makefile  test2.c  test2.s
SCRATCH/RELEASE/asm/exercises/: CMakeLists.txt  Makefile  a1  a1.s  affinity.c  arg  arg.s  arg1  arg1.s  arg11.s  arg2  arg2.s  cpuid2  cpuid2.s  days.S  exercise2.s  f1.S  factorial.s  file.S  fscanf.s  hello.S  mac_affinity.c  main.c  main10  main10.c  main10.s  main11.c  main11.s  main14.c  main2.c  main3.c  main4.c  main5  main5.S  main6  main6.S  main6.c  main7  main7.c  main7.ld_aUX0lD  (+46 more)
SCRATCH/RELEASE/div/: asm_main1.c  asm_test1.S  file.S  md5-fast-x8664.S  md5-test.c  md5.c  server  server.asm  server2.S  sha.S  sha1-fast.c  sha1.c  sha1.h  socktest.s  socktest2.asm  sslsocket.asm  sslsocket.inc  test1  test6.c  time  time.S  wait5  wait5.s
SCRATCH/RELEASE/final_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SCRATCH/RELEASE/xdelete/: Makefile  date.c  days.S  excel.c  isleap.S  mail.c  main.c
SCRATCH/date2.dSYM/Contents/: Info.plist
SCRATCH/date_ex.dSYM/Contents/: Info.plist
SCRATCH/funcs3.dSYM/Contents/: Info.plist
SCRATCH/row.dSYM/Contents/: Info.plist
SCRATCH/sterge10.dSYM/Contents/: Info.plist
SCRATCH/sterge11.dSYM/Contents/: Info.plist
SCRATCH/sterge13.dSYM/Contents/: Info.plist
SCRATCH/sterge2.dSYM/Contents/: Info.plist
SCRATCH/sterge8.dSYM/Contents/: Info.plist
SCRATCH/sterge9.dSYM/Contents/: Info.plist
SCRATCH/string_ex2.dSYM/Contents/: Info.plist
SCRATCH/txt2.dSYM/Contents/: Info.plist
(+228 files in other folders)
